library/src/libqevent.h

typedef struct QEnterEvent QEnterEvent;
typedef struct QEventPoint QEventPoint;
typedef struct QInputDevice QInputDevice;
typedef struct QInputEvent QInputEvent;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QPointerEvent QPointerEvent;
typedef struct QPointingDevice QPointingDevice;
typedef struct QSinglePointEvent QSinglePointEvent;
QTLIBC_API QInputDevice* QInputEvent_Device(const QInputEvent* self);
QTLIBC_API int QInputEvent_DeviceType(const QInputEvent* self);
QTLIBC_API int QInputEvent_Modifiers(const QInputEvent* self);
QTLIBC_API void QInputEvent_SetModifiers(QInputEvent* self, int modifiers);
QTLIBC_API unsigned long long QInputEvent_Timestamp(const QInputEvent* self);
QTLIBC_API QPointerEvent* QPointerEvent_Clone(const QPointerEvent* self);
QTLIBC_API QPointingDevice* QPointerEvent_PointingDevice(const QPointerEvent* self);
QTLIBC_API int QPointerEvent_PointerType(const QPointerEvent* self);
QTLIBC_API void QPointerEvent_SetTimestamp(QPointerEvent* self, unsigned long long timestamp);
QTLIBC_API ptrdiff_t QPointerEvent_PointCount(const QPointerEvent* self);
QTLIBC_API QEventPoint* QPointerEvent_Point(QPointerEvent* self, ptrdiff_t i);
QTLIBC_API libqt_list /* of QEventPoint* */ QPointerEvent_Points(const QPointerEvent* self);
QTLIBC_API QEventPoint* QPointerEvent_PointById(QPointerEvent* self, int id);
QTLIBC_API bool QPointerEvent_AllPointsGrabbed(const QPointerEvent* self);
QTLIBC_API bool QPointerEvent_AllPointsAccepted(const QPointerEvent* self);
QTLIBC_API void QPointerEvent_SetAccepted(QPointerEvent* self, bool accepted);
QTLIBC_API QObject* QPointerEvent_ExclusiveGrabber(const QPointerEvent* self, QEventPoint* point);
QTLIBC_API void QPointerEvent_SetExclusiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* exclusiveGrabber);
QTLIBC_API void QPointerEvent_ClearPassiveGrabbers(QPointerEvent* self, QEventPoint* point);
QTLIBC_API bool QPointerEvent_AddPassiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* grabber);
QTLIBC_API bool QPointerEvent_RemovePassiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* grabber);
QTLIBC_API int QSinglePointEvent_Button(const QSinglePointEvent* self);
QTLIBC_API int QSinglePointEvent_Buttons(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_Position(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_ScenePosition(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_GlobalPosition(const QSinglePointEvent* self);
QTLIBC_API bool QSinglePointEvent_IsBeginEvent(const QSinglePointEvent* self);
QTLIBC_API bool QSinglePointEvent_IsUpdateEvent(const QSinglePointEvent* self);
QTLIBC_API bool QSinglePointEvent_IsEndEvent(const QSinglePointEvent* self);
QTLIBC_API QObject* QSinglePointEvent_ExclusivePointGrabber(const QSinglePointEvent* self);
QTLIBC_API void QSinglePointEvent_SetExclusivePointGrabber(QSinglePointEvent* self, QObject* exclusiveGrabber);
QTLIBC_API void QSinglePointEvent_Delete(QSinglePointEvent* self);
QTLIBC_API QEnterEvent* QEnterEvent_new(QPointF* localPos, QPointF* scenePos, QPointF* globalPos);
QTLIBC_API QEnterEvent* QEnterEvent_Clone(const QEnterEvent* self);
QTLIBC_API QPoint* QEnterEvent_Pos(const QEnterEvent* self);
QTLIBC_API QPoint* QEnterEvent_GlobalPos(const QEnterEvent* self);
QTLIBC_API int QEnterEvent_X(const QEnterEvent* self);
QTLIBC_API int QEnterEvent_Y(const QEnterEvent* self);
QTLIBC_API int QEnterEvent_GlobalX(const QEnterEvent* self);
QTLIBC_API int QEnterEvent_GlobalY(const QEnterEvent* self);
QTLIBC_API QPointF* QEnterEvent_LocalPos(const QEnterEvent* self);
QTLIBC_API QPointF* QEnterEvent_WindowPos(const QEnterEvent* self);
QTLIBC_API QPointF* QEnterEvent_ScreenPos(const QEnterEvent* self);
QTLIBC_API void QEnterEvent_Delete(QEnterEvent* self);